--- a/maps-app/src/main/res/values/styles.xml
+++ b/maps-app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res/com.esri.arcgis.viewer">
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
