--- a/maps-app/src/main/res/anim/popup_rotate_out.xml
+++ b/maps-app/src/main/res/anim/popup_rotate_out.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android"
-    android:interpolator="@android:anim/accelerate_decelerate_interpolator">
-    <rotate android:fromDegrees="0"
-        android:toDegrees="90"
+     android:interpolator="@android:anim/accelerate_decelerate_interpolator">
+    <rotate
+        android:duration="500"
+        android:fromDegrees="0"
         android:pivotX="0"
         android:pivotY="100%"
-        android:duration="500"/>
-    <scale android:fromXScale="1"
-        android:toXScale="0"
+        android:toDegrees="90"/>
+    <scale
+        android:duration="500"
+        android:fromXScale="1"
         android:fromYScale="1"
-        android:toYScale="0"
         android:pivotX="50%"
         android:pivotY="100%"
-        android:duration="500"/>
+        android:toXScale="0"
+        android:toYScale="0"/>
 </set>
