--- a/maps-app/src/main/res/color/drawer_item_text_color_selector.xml
+++ b/maps-app/src/main/res/color/drawer_item_text_color_selector.xml
@@ -2,15 +2,10 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-  <item
-    android:state_enabled="false"
-    android:color="@color/disabled_text_color" />
+    <item android:color="@color/disabled_text_color" android:state_enabled="false"/>
 
-  <item
-    android:state_pressed="true"
-    android:state_enabled="true"
-    android:color="@color/colorPrimaryLight" />
-  
-  <item android:color="@color/colorTextPrimary" />
+    <item android:color="@color/colorPrimaryLight" android:state_enabled="true" android:state_pressed="true"/>
+
+    <item android:color="@color/colorTextPrimary"/>
 
 </selector>
