--- a/maps-app/src/main/res/drawable/drawer_horizontal_divider.xml
+++ b/maps-app/src/main/res/drawable/drawer_horizontal_divider.xml
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-  <item>
-    <shape android:shape="rectangle">
-      <solid android:color="@color/colorPrimaryLight" />
-    </shape>
-  </item>
-  <item
-    android:left="@dimen/drawer_horizontal_divider_left"
-    android:right="@dimen/horizontal_divider_right">
-    <shape android:shape="rectangle">
-      <solid
-        android:color="@color/colorDivider" />
-    </shape>
-  </item>
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="@color/colorPrimaryLight"/>
+        </shape>
+    </item>
+    <item
+        android:left="@dimen/drawer_horizontal_divider_left"
+        android:right="@dimen/horizontal_divider_right">
+        <shape android:shape="rectangle">
+            <solid android:color="@color/colorDivider"/>
+        </shape>
+    </item>
 
 </layer-list>
 
