--- a/maps-app/src/main/res/drawable/horizontal_divider.xml
+++ b/maps-app/src/main/res/drawable/horizontal_divider.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
         android:left="@dimen/horizontal_divider_left"
-        android:right="@dimen/horizontal_divider_right" >
-        <shape android:shape="rectangle" >
-            <solid
-                android:color="@color/colorDivider" />
+        android:right="@dimen/horizontal_divider_right">
+        <shape android:shape="rectangle">
+            <solid android:color="@color/colorDivider"/>
         </shape>
     </item>
 
