--- a/maps-app/src/main/res/drawable/map_results_ribbon_item_selector.xml
+++ b/maps-app/src/main/res/drawable/map_results_ribbon_item_selector.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-	<item android:state_pressed="true"
-		android:drawable="@color/map_results_ribbon_item_pressed"/>
+    <item android:drawable="@color/map_results_ribbon_item_pressed" android:state_pressed="true"/>
 
-	<item android:drawable="@color/map_results_ribbon_item_default"/>
+    <item android:drawable="@color/map_results_ribbon_item_default"/>
 
 </selector>
