--- a/maps-app/src/main/res/layout/drawer_item_layout.xml
+++ b/maps-app/src/main/res/layout/drawer_item_layout.xml
@@ -1,10 +1,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal"
-    android:padding="10dp" 
-    >
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="horizontal"
+              android:padding="10dp">
 
     <TextView
         android:id="@+id/drawer_item_textview"
@@ -12,14 +10,14 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="3"
-        android:maxLines="1" />
+        android:maxLines="1"/>
 
     <ImageView
         android:id="@+id/drawer_item_icon"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:src="@drawable/action_basemaps"
-        android:contentDescription="@string/drawer_time_icon"/>
-    
+        android:contentDescription="@string/drawer_time_icon"
+        android:src="@drawable/action_basemaps"/>
+
 </LinearLayout>
