--- a/maps-app/src/main/res/layout/routing_layout.xml
+++ b/maps-app/src/main/res/layout/routing_layout.xml
@@ -1,33 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/colorPrimaryLight"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingTop="@dimen/activity_vertical_margin" >
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@color/colorPrimaryLight"
+              android:orientation="vertical"
+              android:paddingBottom="@dimen/activity_vertical_margin"
+              android:paddingTop="@dimen/activity_vertical_margin">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <SearchView
                 android:id="@+id/startPoint"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" >
-            </SearchView>
+                android:layout_height="wrap_content"/>
 
             <SearchView
                 android:id="@+id/endPoint"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" >
-            </SearchView>
+                android:layout_height="wrap_content"/>
         </LinearLayout>
 
         <ImageView
@@ -36,7 +34,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:contentDescription="@string/swap_addresses"
-            android:src="@drawable/ic_action_revert" >
+            android:src="@drawable/ic_action_revert">
 
         </ImageView>
     </LinearLayout>
@@ -45,9 +43,9 @@
         android:id="@+id/getRouteButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:background="@color/colorAccent"
         android:padding="5dp"
-        android:text="@string/get_route" 
-        android:layout_gravity="center_horizontal"/>
+        android:text="@string/get_route"/>
 
 </LinearLayout>
