--- a/maps-app/src/main/res/layout/sign_in_activity_portal_url_layout.xml
+++ b/maps-app/src/main/res/layout/sign_in_activity_portal_url_layout.xml
@@ -25,7 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="@string/portal_url_hint"
+            android:text="@string/portal_url_hint"
             android:inputType="textUri"
             android:minWidth="300dp">
 
