--- a/maps-app/src/main/res/values-v21/app_settings.xml
+++ b/maps-app/src/main/res/values-v21/app_settings.xml
@@ -2,6 +2,6 @@
 <resources>
 
     <!-- TODO: add your OAuth Client ID here-->
-    <string name="client_id">STV3sRWfJQxqvspH</string>
+    <string name="client_id">SET_YOUR_OWN_CLIENT_ID_HERE</string>
 
 </resources>
