--- a/maps-app/src/main/res/values-v21/app_settings.xml
+++ b/maps-app/src/main/res/values-v21/app_settings.xml
@@ -3,5 +3,8 @@
 
     <!-- TODO: add your OAuth Client ID here-->
     <string name="client_id">SET_YOUR_OWN_CLIENT_ID_HERE</string>
+    <string name="username">YOUR_PORTAL_USERNAME</string>
+    <string name="password">YOUR_PORTAL_PASSWORD</string>
+    <string name="testPartialName">vo</string>
 
 </resources>
