Moved some strings to app_settings and added new ones to strings.  Now showing the dialog title for basemap dialog on version > 23 SDK.

--- a/maps-app/src/main/res/values/styles.xml
+++ b/maps-app/src/main/res/values/styles.xml
@@ -8,6 +8,10 @@
 
     </style>
 
+    <style name="CustomDialog" parent="@style/Theme.AppCompat.Light.Dialog">
+        <item name="android:windowNoTitle">false</item>
+    </style>
+
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- material colors -->
