--- a/maps-app/src/main/res/values/app_settings.xml
+++ b/maps-app/src/main/res/values/app_settings.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!-- TODO: add your OAuth Client ID here-->
+    <!-- TODO: add your customized values here-->
     <string name="client_id">YOUR_CLIENT_ID</string>
     <string name="username">YOUR_PORTAL_USERNAME</string>
     <string name="password">YOUR_PORTAL_PASSWORD</string>
-    <string name="testPartialName">vo</string>
+    <string name="testPartialName">goo</string>
+    <string name="localAddressNearYou">1005 W Burnside Ave Portland OR</string>
 </resources>
