--- a/maps-app/src/main/res/values/app_settings.xml
+++ b/maps-app/src/main/res/values/app_settings.xml
@@ -6,5 +6,5 @@
     <string name="username">YOUR_PORTAL_USERNAME</string>
     <string name="password">YOUR_PORTAL_PASSWORD</string>
     <string name="testPartialName">vo</string>
-    <string name="redirect_uri">my-maps-app://auth</string>
+    <string name="redirect_uri">YOUR_REDIRECT_URI</string>
 </resources>
