Removed my specific settings.

--- a/maps-app/src/main/res/values/app_settings.xml
+++ b/maps-app/src/main/res/values/app_settings.xml
@@ -2,11 +2,12 @@
 <resources>
 
     <!-- TODO: add your OAuth Client ID here-->
-    <string name="client_id">PCWzGLlrLydo9u3Z</string>
+    <string name="client_id">YOUR_CLIENT_ID</string>
 
     <!-- This redirect URI is the default value for https://www.arcgis.com -->
     <string name="redirect_uri">my-ags-app://auth</string>
-    <string name="username">sandie_runtime</string>
-    <string name="password">mwbd5029</string>
+
+    <string name="username">YOUR_PORTAL_USERNAME</string>
+    <string name="password">YOUR_PORTAL_PASSWORD</string>
     <string name="testPartialName">vo</string>
 </resources>
