Aligned settings with default redirect uri

--- a/maps-app/src/main/res/values/app_settings.xml
+++ b/maps-app/src/main/res/values/app_settings.xml
@@ -3,6 +3,11 @@
 
     <!-- TODO: add your OAuth Client ID here-->
     <string name="client_id">YOUR_CLIENT_ID</string>
+
+    <!-- This redirect URI is the default value for https://www.arcgis.com -->
+    <string name="redirect_uri">my-ags-app://auth</string>
+
+    <!-- These are used for Robotium tests only -->
     <string name="username">YOUR_PORTAL_USERNAME</string>
     <string name="password">YOUR_PORTAL_PASSWORD</string>
     <string name="testPartialName">vo</string>
