Fixed build.gradle fixes and removed unused tests

--- a/maps-app/src/main/res/values/app_settings.xml
+++ b/maps-app/src/main/res/values/app_settings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <!-- TODO: add your customized values here-->
-    <string name="client_id">YOUR_CLIENT_ID</string>
+    <string name="client_id">PCWzGLlrLydo9u3Z</string>
 
     <!-- This redirect URI is the default value for https://www.arcgis.com -->
     <string name="redirect_uri">my-ags-app://auth</string>
