Upgraded gradle version and runtime sdk (to build 1744).  Changed behavior of the routing test.

--- a/maps-app/src/main/res/values/app_settings.xml
+++ b/maps-app/src/main/res/values/app_settings.xml
@@ -2,13 +2,11 @@
 <resources>
 
     <!-- TODO: add your customized values here-->
-    <string name="client_id">YOUR_CLIENT_ID</string>
+    <string name="client_id"></string>
 
     <!-- This redirect URI is the default value for https://www.arcgis.com -->
     <string name="redirect_uri">my-ags-app://auth</string>
 
-    <string name="username">YOUR_PORTAL_USERNAME</string>
-    <string name="password">YOUR_PORTAL_PASSWORD</string>
     <string name="testPartialName">goo</string>
     <string name="localAddressNearYou">1005 W Burnside Ave Portland OR</string>
 </resources>
