--- a/maps-app/src/main/res/layout/maps_app_activity.xml
+++ b/maps-app/src/main/res/layout/maps_app_activity.xml
@@ -1,4 +1,4 @@
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                         android:id="@+id/maps_app_activity_drawer_layout"
                                         android:layout_width="match_parent"
                                         android:layout_height="match_parent">
@@ -22,4 +22,4 @@
         android:divider="@color/colorDivider"
         android:dividerHeight="1px"/>
 
-</android.support.v4.widget.DrawerLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
